--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
         <link rel="icon" href="https://edu-lim.oss-cn-beijing.aliyuncs.com/icon/duck.png" type="image/x-icon">
         <script src="assets/js/modernizr-2.8.3-respond-1.4.2.min.js"></script>
     </head>
-
-    <style type="text/css">html {  filter:grayscale(100%);  -webkit-filter:grayscale(100%);  -moz-filter:grayscale(100%);  -ms-filter:grayscale(100%);  -o-filter:grayscale(100%); filter:progid:DXImageTransform.Microsoft.BasicImage(grayscale=1);  -webkit-filter:grayscale(1)}</style>
+<!--    灰色滤镜-->
+<!--    <style type="text/css">html {  filter:grayscale(100%);  -webkit-filter:grayscale(100%);  -moz-filter:grayscale(100%);  -ms-filter:grayscale(100%);  -o-filter:grayscale(100%); filter:progid:DXImageTransform.Microsoft.BasicImage(grayscale=1);  -webkit-filter:grayscale(1)}</style>-->
 <body>
 
 
