--- a/index.html
+++ b/index.html
@@ -635,9 +635,9 @@
 <!--                    </div>-->
                 </div>
             </section>
-            <section class="footer">
-                <a href="https://beian.miit.gov.cn/"><p >闽ICP备2022011642号-1</p></a>
-            </section>
+<!--            <section class="footer">-->
+<!--                <a href="https://beian.miit.gov.cn/"><p >闽ICP备2022011642号-1</p></a>-->
+<!--            </section>-->
         </div>
 
    <script src="assets/js/jquery-1.11.2.min.js"></script>
